[package]
name = "usb-passthrough"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7.7", features = ["inline-asm", "critical-section-single-core"]}
cortex-m-rt = "0.7.5"
crc = "3.2.1"
defmt = {version = "0.3.10", optional = true}
defmt-rtt = {version = "0.4.1", optional = true}
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", default-features = false}
embassy-executor = {git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "task-arena-size-49152"]}
embassy-futures = {git = "https://github.com/embassy-rs/embassy"}
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", features = ["memory-x", "stm32g0b1cc", "time-driver-any", "exti", "unstable-pac"]}
embassy-sync = {git = "https://github.com/embassy-rs/embassy"}
embassy-time = {git = "https://github.com/embassy-rs/embassy", features = ["tick-hz-32_768"]}
embassy-usb = {git = "https://github.com/embassy-rs/embassy"}
embedded-alloc = "0.6.0"
embedded-hal-bus = {version = "0.2.0", features = ["defmt-03", "async"]}
embedded-io-async = "0.6.1"
heapless = "0.8.0"
panic-halt = "1.0.0"
panic-probe = {version = "0.3.2", features = ["print-defmt"], optional = true}
portable-atomic = {version = "1.10.0", default-features = false, features = ["require-cas", "unsafe-assume-single-core"]}
postcard = "1.1.1"
serde = {version = "1.0.217", default-features = false, features = ["derive"]}

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
std = []

[profile.release]
opt-level = "z"
lto = true
debug = true
